[package]
name = "chip_infinite"
authors = ["UsrBinLuna"]
description = "🦀 A CHIP-8 emulator by crustaceans, for crustaceans."
license = "MIT"
version = "1.0.0"
edition = "2021"
keywords = ["emulators"]

[[bin]]
name = "emu"
path = "src/emu.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
